Dodana veza na bezu podataka Spojen program na bazu podataka preko Entity Frameworka

--- a/Software/DataAccessLayer/App.config
+++ b/Software/DataAccessLayer/App.config
@@ -7,8 +7,8 @@
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework, Version=9.0.0.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
-      </provider></providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework, Version=9.0.0.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
+    </providers>
   </entityFramework>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -22,4 +22,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="DrugstoreModel" connectionString="data source=DESKTOP-F3TLOOV\SQLEXPRESS;initial catalog=BAZA_LJEKARNA;user id=user;password=1234;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
