--- a/Software/DataAccessLayer/DataAccessLayer.csproj
+++ b/Software/DataAccessLayer/DataAccessLayer.csproj
@@ -91,6 +91,7 @@
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.6.0.0\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
@@ -107,7 +108,25 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Artikl.cs" />
+    <Compile Include="Dobavljac.cs" />
+    <Compile Include="DrugstoreModel.cs" />
+    <Compile Include="Farmaceut.cs" />
+    <Compile Include="JedinicaMjere.cs" />
+    <Compile Include="Lijecnik.cs" />
+    <Compile Include="Narudzba.cs" />
+    <Compile Include="Pacijent.cs" />
+    <Compile Include="Podaci.cs" />
+    <Compile Include="Primka.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Racun.cs" />
+    <Compile Include="Recept.cs" />
+    <Compile Include="StatusNarudzbe.cs" />
+    <Compile Include="StavkeNarudzbe.cs" />
+    <Compile Include="StavkePrimke.cs" />
+    <Compile Include="StavkeRacuna.cs" />
+    <Compile Include="StavkeRecepta.cs" />
+    <Compile Include="Ustanova.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
