--- a/Software/EntitiesLayer/EntitiesLayer.csproj
+++ b/Software/EntitiesLayer/EntitiesLayer.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>ed06da00-1871-4665-b9c8-070359627011</ProjectGuid>
+    <ProjectGuid>{ED06DA00-1871-4665-B9C8-070359627011}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>EntitiesLayer</RootNamespace>
@@ -31,24 +31,36 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Entities\Artikl.cs" />
+    <Compile Include="Entities\Dobavljac.cs" />
+    <Compile Include="Entities\Farmaceut.cs" />
+    <Compile Include="Entities\JedinicaMjere.cs" />
+    <Compile Include="Entities\Lijecnik.cs" />
+    <Compile Include="Entities\Narudzba.cs" />
+    <Compile Include="Entities\Pacijent.cs" />
+    <Compile Include="Entities\Podaci.cs" />
+    <Compile Include="Entities\Primka.cs" />
+    <Compile Include="Entities\Racun.cs" />
+    <Compile Include="Entities\Recept.cs" />
+    <Compile Include="Entities\StatusNarudzbe.cs" />
+    <Compile Include="Entities\StavkeNarudzbe.cs" />
+    <Compile Include="Entities\StavkePrimke.cs" />
+    <Compile Include="Entities\StavkeRacuna.cs" />
+    <Compile Include="Entities\StavkeRecepta.cs" />
+    <Compile Include="Entities\Ustanova.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
- </Project>
+</Project>
