Napravljeno upravljanje jedinicama mjera

--- a/Software/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Software/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="ArtiklServices.cs" />
     <Compile Include="Exceptions\DrugstoreException.cs" />
-    <Compile Include="Exceptions\LoginException.cs" />
+    <Compile Include="Exceptions\JedinicaMjereException.cs" />
     <Compile Include="FarmaceusServices.cs" />
     <Compile Include="JedinicaMjereServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
