--- a/Software/DataAccessLayer/DataAccessLayer.csproj
+++ b/Software/DataAccessLayer/DataAccessLayer.csproj
@@ -111,6 +111,7 @@
     <Compile Include="DrugstoreModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ArtiklRepository.cs" />
+    <Compile Include="Repositories\DobavljacRepository.cs" />
     <Compile Include="Repositories\FarmaceutRepository.cs" />
     <Compile Include="Repositories\JedinicaMjereRepository.cs" />
     <Compile Include="Repositories\Repository.cs" />
