Implementirana logika za upravljanje dobavljačima

--- a/Software/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Software/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="ArtiklServices.cs" />
     <Compile Include="DobavljacService.cs" />
+    <Compile Include="Exceptions\ArtiklException.cs" />
     <Compile Include="Exceptions\DobavljacException.cs" />
     <Compile Include="Exceptions\DrugstoreException.cs" />
     <Compile Include="Exceptions\JedinicaMjereException.cs" />
