Implementiran pregled narudžbi

--- a/Software/EntitiesLayer/EntitiesLayer.csproj
+++ b/Software/EntitiesLayer/EntitiesLayer.csproj
@@ -44,7 +44,9 @@
   <ItemGroup>
     <Compile Include="Entities\Artikl.cs" />
     <Compile Include="Entities\Dobavljac.cs" />
+    <Compile Include="Entities\Dobavljac.Ext.cs" />
     <Compile Include="Entities\Farmaceut.cs" />
+    <Compile Include="Entities\Farmaceut.Ext.cs" />
     <Compile Include="Entities\JedinicaMjere.cs" />
     <Compile Include="Entities\JedinicaMjere.Ext.cs" />
     <Compile Include="Entities\Lijecnik.cs" />
@@ -55,6 +57,7 @@
     <Compile Include="Entities\Racun.cs" />
     <Compile Include="Entities\Recept.cs" />
     <Compile Include="Entities\StatusNarudzbe.cs" />
+    <Compile Include="Entities\StatusNarudzbe.Ext.cs" />
     <Compile Include="Entities\StavkeNarudzbe.cs" />
     <Compile Include="Entities\StavkePrimke.cs" />
     <Compile Include="Entities\StavkeRacuna.cs" />
