Implementirano dodavanje ispravno napravljene narudzbe

--- a/Software/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Software/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -51,6 +51,7 @@
     <Compile Include="JedinicaMjereServices.cs" />
     <Compile Include="NarudzbaServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StatusServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj">
