--- a/Software/DataAccessLayer/DataAccessLayer.csproj
+++ b/Software/DataAccessLayer/DataAccessLayer.csproj
@@ -109,7 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DrugstoreModel.cs" />
-    <Compile Include="NarudzbaRepository.cs" />
+    <Compile Include="Repositories\NarudzbaRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ArtiklRepository.cs" />
     <Compile Include="Repositories\DobavljacRepository.cs" />
