--- a/Software/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Software/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -51,6 +51,7 @@
     <Compile Include="FarmaceusServices.cs" />
     <Compile Include="JedinicaMjereServices.cs" />
     <Compile Include="NarudzbaServices.cs" />
+    <Compile Include="PacijentServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusServices.cs" />
   </ItemGroup>
