--- a/Software/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Software/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -53,6 +53,7 @@
     <Compile Include="NarudzbaServices.cs" />
     <Compile Include="PacijentServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReceptServices.cs" />
     <Compile Include="StatusServices.cs" />
   </ItemGroup>
   <ItemGroup>
