--- a/Software/DataAccessLayer/DataAccessLayer.csproj
+++ b/Software/DataAccessLayer/DataAccessLayer.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Repositories\FarmaceutRepository.cs" />
     <Compile Include="Repositories\JedinicaMjereRepository.cs" />
     <Compile Include="Repositories\PacijentRepository.cs" />
+    <Compile Include="Repositories\PrimkaRepository.cs" />
     <Compile Include="Repositories\ReceptRepository.cs" />
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\StatusRepository.cs" />
