--- a/Software/PresentationLayer/PresentationLayer.csproj
+++ b/Software/PresentationLayer/PresentationLayer.csproj
@@ -136,6 +136,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReceiptDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReceiptDetails.Designer.cs">
+      <DependentUpon>ReceiptDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="Receipts.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -208,6 +214,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ReceiptDetails.resx">
+      <DependentUpon>ReceiptDetails.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Receipts.resx">
       <DependentUpon>Receipts.cs</DependentUpon>
     </EmbeddedResource>
