--- a/Software/PresentationLayer/PresentationLayer.csproj
+++ b/Software/PresentationLayer/PresentationLayer.csproj
@@ -171,6 +171,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Hospitals.resx">
       <DependentUpon>Hospitals.cs</DependentUpon>
